# dominux_drive

./: .gitignore  Makefile  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/apps/users/: mod.rs  models.rs  repositories.rs  routers.rs
deploy/dev/: .env  backend.Dockerfile  docker-compose.yml
deploy/prod/: backend.Dockerfile
