[package]
name = "dominux_drive_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.1", features = ["full"] }

sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres",  ] }

anyhow = "1.0.71"
